module_3/terraform-vpc/modules/security_group/main.tf
resource "aws_security_group" "yourhostel_security_group" {
  name        = "yourhostel-security-group"
  description = "Security group for ElastiCache access and SSH"
  vpc_id      = aws_vpc.yourhostel_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom TCP"
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "yourhostel-security-group"
  }
}
